# receipts-ocr

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  errorLogs.txt  index.html  package-lock.json  package.json  playwright.config.ts  project_issues.json  vite.config.ts
.github/workflows/: deploy.yml  quality.yml
backend/: Dockerfile  app.py  pyproject.toml  requirements.txt
notes/: system_logs.txt
scripts/: check-bundle-size.sh  prestart.sh  setup.ps1  setup.sh  start.sh  stop.sh
src/: App.css  App.tsx  config.ts  types.ts
src/components/: DockerStatus.tsx  ScanDetailsModal.tsx  SystemLogsPanel.tsx  TroubleshootingWizard.tsx
src/services/: angleDetectionService.ts  backendLogService.ts  dockerHealthService.ts  ocrService.ts  systemLogger.ts
tests/: receipts-ocr.spec.ts
